# lellm

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  README_ZH.md  README_zh.md
.mimocode/: .cron-lock
.mimocode/command/: publish.md
discuss/: mcp-transport-http-sse.md  v04-plan-vs-reality.md  v05-graph-as-runtime.md
docs/: ADR-0003-leaf-context-split.md  AGENT-DESIGN.md  BLUEPRINT.md  DESIGN.md  GRILL-ACTION-PLAN.md  langgraph-vs-lellm-graph.md  mcp-design.md  mcp-overview.md  mcp-transport-guide.md  v02-graph-design-diff.md  v02-graph-design.md  v02-graph-grill-decisions.md  v03-architecture-evolution.md  v04-architecture-evolution.md  v05-graph-as-runtime.md  v06-architecture-decisions.md
docs/adr/: 000-architecture-review-gate.md  0001-streamsink-abstraction.md  0002-unify-execution-path.md  001-mcp-as-tool-runtime-extension.md  002-mcp-crate-structure.md  003-mcp-transport-abstraction.md  (+4 more)
lellm/: Cargo.toml
lellm-agent/: Cargo.toml
lellm-agent/examples/: calculator_graph.rs  calculator_graph_mock.rs  mcp_multi.rs  simple_agent.rs  streaming_agent.rs  system_prompt.rs  tool_definition.rs  tool_use.rs  tool_use_react.rs  tool_use_real.rs  weather_agent.rs  weather_agent_mcp.rs  weather_agent_prompt.rs
lellm-agent/examples/_shared/: city_aliases.rs  city_data.rs  city_resolver.rs  shared.rs
lellm-agent/src/: hook.rs  lib.rs
lellm-agent/src/memory/: long_term.rs  mod.rs  short_term.rs  store.rs
lellm-agent/src/runtime/: builder.rs  config.rs  context_ext.rs  event.rs  event_bridge.rs  fallback.rs  flow_node.rs  invoker.rs  iteration.rs  loop_.rs  loop_detector.rs  mod.rs  react.rs  request_opts.rs  retry.rs  runtime.rs  signal_voter.rs  state.rs  stream_translation.rs  typed_state.rs
lellm-agent/src/runtime/context/: budget.rs  compactor.rs  estimation.rs  execution.rs  local_compactor.rs  mod.rs  tests.rs
lellm-agent/src/runtime/react/: graph_builder.rs  guards.rs  llm_node.rs  tool_node.rs
lellm-agent/src/runtime/tools/: args.rs  executor.rs  mod.rs  registry.rs
lellm-agent/src/runtime/tools/mcp/: catalog.rs  mod.rs  registry.rs  watcher.rs
lellm-agent/src/tools/: builder.rs  context.rs  executor.rs  fallback.rs  loop_.rs  mod.rs  registry.rs  request_opts.rs  retry.rs  runtime.rs
lellm-agent/tests/: comparison_test.rs  integration.rs  mcp_integration_tests.rs  tool_catalog.rs  tool_macro_core.rs  tool_macro_edge_cases.rs  tool_macro_factory.rs  tool_macro_tests.rs
lellm-core/: Cargo.toml
lellm-core/src/: error.rs  ids.rs  lib.rs  message.rs  prompt.rs  request.rs  response.rs  tool.rs
lellm-derive/: Cargo.toml
lellm-derive/src/: codegen.rs  fn_expand.rs  helpers.rs  lib.rs  mutation_expand.rs  struct_expand.rs
lellm-events/: Cargo.toml
lellm-events/src/: lib.rs
lellm-graph/: Cargo.toml  REVIEW.md
lellm-graph/examples/: calculator_graph.rs  calculator_graph_mock.rs  pure_graph_agent.rs
lellm-graph/src/: barrier_node.rs  barrier_wait.rs  branch_state.rs  checkpoint.rs  checkpoint_codec.rs  checkpoint_policy.rs  compiled_subgraph.rs  delta.rs  error.rs  event.rs  execution_engine.rs  execution_loop.rs  executor.rs  graph.rs  graph_analysis.rs  graph_builder.rs  hook.rs  ids.rs  lib.rs  llm_node.rs  mutation_log.rs  node.rs  node_context.rs  owned_execution_engine.rs  parallel_node.rs  runtime_event.rs  session.rs  state.rs  state_lens.rs  statekey.rs  store.rs  stream_chunk.rs  stream_emitter.rs  subgraph_node.rs  subgraph_spec.rs  test_executor.rs  tool_node.rs  trace.rs  workflow_state.rs
lellm-graph/src/checkpoint/: checkpoint.rs  checkpoint_codec.rs  checkpoint_data.rs  checkpoint_policy.rs  mod.rs  mutation_log.rs  store.rs  trace.rs
lellm-graph/src/compiler/: context.rs  inline_pass.rs  mod.rs  pass.rs
lellm-graph/src/exec/: execution_engine.rs  execution_loop.rs  mod.rs  owned_execution_engine.rs  session.rs
lellm-graph/src/graph/: graph.rs  graph_analysis.rs  graph_builder.rs  graph_core.rs  mod.rs
lellm-graph/src/node/: barrier_node.rs  barrier_sink.rs  compiled_subgraph.rs  mod.rs  node.rs  node_context.rs  node_core.rs  parallel_node.rs  subgraph_spec.rs
lellm-graph/src/state/: mod.rs  state.rs  statekey.rs
lellm-graph/tests/: checkpoint_restore_test.rs  checkpoint_test.rs  graph_test.rs  parallel_test.rs
lellm-macros/: Cargo.toml
lellm-macros/src/: fn_expand.rs  helpers.rs  lib.rs  struct_expand.rs
lellm-mcp/: Cargo.toml
lellm-mcp/examples/: mcp_multi.rs  mcp_server.rs  mcp_tencent_map_server.rs  mcp_weather.rs  mcp_weather_http.rs  mcp_weather_sse.rs
lellm-mcp/src/: lib.rs
lellm-mcp/src/bridge/: catalog.rs  mod.rs  multi.rs  registry.rs  watcher.rs
lellm-mcp/src/client/: mod.rs
lellm-mcp/src/protocol/: error.rs  mod.rs  notification.rs  request.rs  response.rs
lellm-mcp/src/server/: handler.rs  mod.rs  simple.rs
lellm-mcp/src/transport/: http.rs  mod.rs  sse.rs  state.rs  stdio.rs
lellm-mcp/tests/: mcp_integration_tests.rs  protocol_tests.rs  server_tests.rs
lellm-provider/: Cargo.toml
lellm-provider/examples/: conversation.rs  mock_test.rs  quickstart.rs  router_registry.rs  streaming.rs
lellm-provider/examples/common/: mod.rs
lellm-provider/src/: builder.rs  lib.rs  router.rs
lellm-provider/src/providers/: anthropic.rs  base.rs  codec.rs  google.rs  mock.rs  mod.rs  openai_compat.rs
lellm-provider/src/providers/stream/: mod.rs  sse_frame.rs  sse_parser.rs  stream_processor.rs  tool_call_accumulator.rs  usage_accumulator.rs
lellm-provider/tests/: integration.rs
lellm-runtime/: Cargo.toml
lellm-runtime/src/: checkpoint.rs  delta.rs  lib.rs  state.rs  state_manager.rs  statekey.rs  store.rs
lellm-tool/: Cargo.toml
lellm-tool/src/: lib.rs
lellm/src/: lib.rs
memory/: MEMORY.md  agent-state-working-set.md  barrier-rewait-semantics.md  checkpoint-snapshot-wal.md  checkpoint-three-layer-architecture.md  commit-batch-pipeline.md  mcp-server-feature-gate.md  parallel-state-delta-merge.md
scripts/: publish.sh  run-mcp-server-client.sh  run-mcp-weather.sh  run-tests.sh  run-weather-agent-mcp.sh  run-weather-agent.sh  test-mcp-sse.sh
(+4 files in other folders)
