[workspace]
members = [
    "lellm",
    "lellm-core",
    "lellm-provider",
    "lellm-agent",
    "lellm-macros",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Internal
lellm-core = { path = "lellm-core", version = "0.1" }
lellm-provider = { path = "lellm-provider", version = "0.1" }
lellm-agent = { path = "lellm-agent", version = "0.1" }
lellm-macros = { path = "lellm-macros", version = "0.1" }

# Common
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1"
tracing = "0.1"
thiserror = "2"
futures-core = "0.3"
futures-util = "0.3"
