[workspace]
members = [
    "lellm",
    "lellm-core",
    "lellm-provider",
    "lellm-agent",
    "lellm-derive",
    "lellm-mcp",
    "lellm-graph",
]
resolver = "2"

[workspace.package]
version = "0.4.2"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Internal
lellm-core = { path = "lellm-core", version = "0.4" }
lellm-provider = { path = "lellm-provider", version = "0.4" }
lellm-agent = { path = "lellm-agent", version = "0.4" }
lellm-derive = { path = "lellm-derive", version = "0.4" }
lellm-mcp = { path = "lellm-mcp", version = "0.4" }
lellm-graph = { path = "lellm-graph", version = "0.4" }

# Common
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1"
tracing = "0.1"
thiserror = "2"
futures-core = "0.3"
futures-util = "0.3"
secrecy = "0.8"
url = "2"
schemars = "1"
indexmap = "2"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
futures = "0.3"
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
