[package]
name = "lellm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types for LeLLM — Message, ChatRequest, LlmError"
documentation = "https://docs.rs/lellm-core"
repository = "https://github.com/lellm-ai/lellm"

[dependencies]
anyhow = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[features]
default = []
anyhow = ["dep:anyhow"]
tool = ["dep:schemars"]
