[package]
name = "lellm-events"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LeLLM 事件协议 — 执行时遥测与可观测性"

[dependencies]
lellm-core.workspace = true
lellm-runtime.workspace = true
lellm-provider.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
thiserror.workspace = true
