[package]
name = "lellm-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Graph/Node/Edge orchestration layer for LeLLM — with State, Delta, Checkpoint"
documentation = "https://docs.rs/lellm-graph"
repository = "https://github.com/lellm-ai/lellm"

[dependencies]
lellm-core.workspace = true
async-trait.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
futures = "0.3"
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
lellm-provider = { path = "../lellm-provider", features = ["openai-compat", "mock"] }
lellm-core = { workspace = true, features = ["anyhow"] }
lellm-derive = { path = "../lellm-derive" }
lellm-tool = { path = "../lellm-tool" }
schemars.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"

[[example]]
name = "pure_graph_agent"
path = "examples/pure_graph_agent.rs"

[[example]]
name = "calculator_graph"
path = "examples/calculator_graph.rs"

[[example]]
name = "calculator_graph_mock"
path = "examples/calculator_graph_mock.rs"
