[package]
name = "lellm-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Derive macros for LeLLM — ToolSchema, ParallelSafety"
documentation = "https://docs.rs/lellm-macros"
repository = "https://github.com/penghcn/lellm"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits", "parsing", "printing"] }
