[package]
name = "lellm-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) Client for LeLLM"
documentation = "https://docs.rs/lellm-mcp"
repository = "https://github.com/lellm-ai/lellm"

[dependencies]
lellm-core.workspace = true
lellm-agent = { workspace = true, optional = true }

async-trait.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures-core.workspace = true
futures-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
reqwest = { workspace = true, optional = true }
eventsource-stream = { version = "0.2", optional = true }
futures = { workspace = true, optional = true }

[features]
default = ["stdio", "bridge"]
stdio = []
sse = ["dep:reqwest", "dep:eventsource-stream", "dep:futures"]
http = ["dep:reqwest"]
bridge = ["dep:lellm-agent"]

[dev-dependencies]
lellm-agent.workspace = true
