[package]
name = "lellm-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) Client / Server for LeLLM"
documentation = "https://docs.rs/lellm-mcp"
repository = "https://github.com/lellm-ai/lellm"

[dependencies]
async-trait.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
futures-core.workspace = true
futures-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
reqwest = { workspace = true, optional = true }
eventsource-stream = { version = "0.2", optional = true }
futures = { workspace = true, optional = true }
axum = { version = "0.8", optional = true }

[features]
default = ["stdio"]
stdio = []
sse = ["dep:reqwest", "dep:eventsource-stream", "dep:futures"]
http = ["dep:reqwest"]
server = ["dep:axum"]

[dev-dependencies]
reqwest.workspace = true
urlencoding = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "mcp_server"
path = "examples/mcp_server.rs"
required-features = ["server"]

[[example]]
name = "mcp_weather_sse"
path = "examples/mcp_weather_sse.rs"
required-features = ["sse"]

[[example]]
name = "mcp_weather_http"
path = "examples/mcp_weather_http.rs"
required-features = ["http"]

[[example]]
name = "mcp_tencent_map_server"
path = "examples/mcp_tencent_map_server.rs"
required-features = ["server"]
