[package]
name = "lellm-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Provider adapters for LeLLM — OpenAI, Anthropic, and more"
documentation = "https://docs.rs/lellm-provider"
repository = "https://github.com/penghcn/lellm"

[features]
default = ["openai", "anthropic", "openai-compat"]
openai = []
anthropic = []
openai-compat = []
mock = []

[dependencies]
lellm-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-core.workspace = true
futures-util.workspace = true
secrecy.workspace = true
url.workspace = true
http = "1"
bytes = "1"
