[package]
name = "lellm-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime infrastructure for LeLLM — State, Delta, Reducer, Checkpoint, ExecutionTrace"
documentation = "https://docs.rs/lellm-runtime"
repository = "https://github.com/lellm-ai/lellm"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["serde"] }
