[package]
name = "lellm-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime infrastructure for LeLLM — State, Delta, Reducer, Checkpoint, ExecutionTrace"
documentation = "https://docs.rs/lellm-runtime"
repository = "https://github.com/lellm-ai/lellm"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
