[package]
name = "lellm-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tool construction framework for LeLLM — schema generation, #[tool] macro, safe_fn factory"
documentation = "https://docs.rs/lellm-tool"
repository = "https://github.com/lellm-ai/lellm"

[dependencies]
lellm-core.workspace = true
lellm-derive = { workspace = true, optional = true }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = ["derive"]
derive = ["dep:lellm-derive"]
