[package]
name = "lellm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust LLM orchestration framework — LangChain / LangGraph / AutoGen in Rust"
documentation = "https://docs.rs/lellm"
repository = "https://github.com/lellm-ai/lellm"

[features]
default = ["provider"]
core = ["dep:lellm-core"]
provider = ["dep:lellm-core", "dep:lellm-provider"]
graph = ["dep:lellm-core", "dep:lellm-graph"]
agent = ["dep:lellm-core", "dep:lellm-graph", "dep:lellm-provider", "dep:lellm-agent"]
mcp = ["dep:lellm-core", "dep:lellm-graph", "dep:lellm-mcp", "dep:lellm-agent", "lellm-agent/mcp"]
derive = ["dep:lellm-derive"]
full = ["graph", "provider", "agent", "mcp", "derive"]

[dependencies]
lellm-core = { workspace = true, optional = true }
lellm-provider = { workspace = true, optional = true }
lellm-graph = { workspace = true, optional = true }
lellm-agent = { workspace = true, optional = true }
lellm-mcp = { workspace = true, optional = true }
lellm-derive = { workspace = true, optional = true }
