[package]
name = "lellm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust LLM orchestration framework — LangChain / LangGraph / AutoGen in Rust"
documentation = "https://docs.rs/lellm"
repository = "https://github.com/lellm-ai/lellm"

[features]
default = ["provider"]
core = ["dep:lellm-core"]
tool = ["dep:lellm-core", "lellm-core/tool"]
provider = ["dep:lellm-core", "dep:lellm-provider"]
graph = ["dep:lellm-core", "dep:lellm-graph"]
agent = ["dep:lellm-core", "dep:lellm-graph", "dep:lellm-provider", "dep:lellm-agent", "lellm-core/tool"]
mcp = ["dep:lellm-core", "dep:lellm-graph", "dep:lellm-mcp", "dep:lellm-agent", "lellm-core/tool", "lellm-agent/mcp", "lellm-agent/sse", "lellm-agent/http"]
derive = ["dep:lellm-derive"]
full = ["graph", "provider", "agent", "mcp", "derive", "tool"]

[dependencies]
lellm-core = { workspace = true, optional = true }
lellm-provider = { workspace = true, optional = true }
lellm-graph = { workspace = true, optional = true }
lellm-agent = { workspace = true, optional = true }
lellm-mcp = { workspace = true, optional = true }
lellm-derive = { workspace = true, optional = true }
